--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeDw+CnPj8wUpHf17Q7AGT",
+      "authorship_tag": "ABX9TyPtWNz+iOu2esk8XibXvIlA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1869,6 +1869,273 @@
           "name": "stdout",
           "text": [
             "vaishnavi sharma\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.array(55) #zero dimensional for one number\n",
+        "print(a.ndim)\n",
+        "print(a.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1o7XO89Bv37T",
+        "outputId": "70c8081e-c2c0-42b1-ec15-b5dd1e087325"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "b=np.array([55,65,70]) # one dimensional for list\n",
+        "print(b)\n",
+        "print(b.shape)"
+      ],
+      "metadata": {
+        "id": "an8IWiLCwPU3",
+        "outputId": "30ab3e7d-c3e6-4d9f-8ddb-bf0bb02b6604",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[55 65 70]\n",
+            "(3,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix=np.array([[2,4],[5,6]]) #two dimensional in matrix (for coloumns and rows)\n",
+        "mat=np.array([[2,6],[3,7],[4,8],[5,9]])\n",
+        "print(matrix)\n",
+        "print(matrix.shape)\n",
+        "print(mat)\n",
+        "print(mat.shape)"
+      ],
+      "metadata": {
+        "id": "TFs1WHC6x_6G",
+        "outputId": "ef8ad62b-0f1b-4e6f-df3a-82782d939988",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[2 4]\n",
+            " [5 6]]\n",
+            "(2, 2)\n",
+            "[[2 6]\n",
+            " [3 7]\n",
+            " [4 8]\n",
+            " [5 9]]\n",
+            "(4, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dim=np.array([[2,3,4,5],[6,7,8,9]])\n",
+        "print(dim)"
+      ],
+      "metadata": {
+        "id": "cTlDMoeMx-sC",
+        "outputId": "cbc806c2-ce3a-4226-fb20-d3061bb96933",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[2 3 4 5]\n",
+            "  [6 7 8 9]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#broadcasting\n",
+        "a=np.array([5,6,8,2])\n",
+        "b=np.array([2,3,4,5])\n",
+        "\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a*b)\n",
+        "print(a/b)"
+      ],
+      "metadata": {
+        "id": "Z8hrgGkm0OgF",
+        "outputId": "cf58569b-4321-4ef2-bd20-a7a4aec243ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 7  9 12  7]\n",
+            "[ 3  3  4 -3]\n",
+            "[10 18 32 10]\n",
+            "[2.5 2.  2.  0.4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# where broadcasting is zero dimensional with one dimensional and it fails where dimensions does not match\n",
+        "a=np.array([5,6])\n",
+        "b=np.array(8)\n",
+        "print(a+b)\n",
+        "print(len(a))\n",
+        "print(sum(a))\n",
+        "print(a.mean())\n",
+        "print(a.max())\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "l5Z9zyJjzXEu",
+        "outputId": "eb697323-f479-4667-fa16-d65af4b68ae9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[13 14]\n",
+            "2\n",
+            "11\n",
+            "5.5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#identity matrix\n",
+        "i=np.eye(3)\n",
+        "print(i)"
+      ],
+      "metadata": {
+        "id": "Qpg1vZFA4let",
+        "outputId": "890ef596-6d6e-42a7-e062-66f031904c0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 0. 0.]\n",
+            " [0. 1. 0.]\n",
+            " [0. 0. 1.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.ones([2,3])\n",
+        "print(a)\n",
+        "b=np.full([2,4],3)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "oGyb_ecL5gzB",
+        "outputId": "6d876d7e-45f4-456f-fd16-207c1c0b1a94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 1. 1.]\n",
+            " [1. 1. 1.]]\n",
+            "[[3 3 3 3]\n",
+            " [3 3 3 3]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array(2)\n",
+        "b=np.array([3,5,6])\n",
+        "c=np.array([2,1,6])\n",
+        "print(a*b+c)\n",
+        "print(np.median(a))\n",
+        "#mode=?\n"
+      ],
+      "metadata": {
+        "id": "60B9G0IB6lSv",
+        "outputId": "0b4b8de3-2a45-41b6-d117-ac30adade988",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 8 11 18]\n",
+            "2.0\n"
           ]
         }
       ]
