--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtWNz+iOu2esk8XibXvIlA",
+      "authorship_tag": "ABX9TyPiUMLb/deyVPcO0tv42D7q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1888,7 +1888,7 @@
         "id": "1o7XO89Bv37T",
         "outputId": "70c8081e-c2c0-42b1-ec15-b5dd1e087325"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1915,7 +1915,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1944,7 +1944,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1965,24 +1965,31 @@
     {
       "cell_type": "code",
       "source": [
-        "dim=np.array([[2,3,4,5],[6,7,8,9]])\n",
-        "print(dim)"
+        "dim=np.array([[2,3,4,5],[6,7,8,9]])#two dimensional\n",
+        "print(dim)\n",
+        "print(\"________\")\n",
+        "a=np.array([[[2,4]],[[5,6]]])#three dimensional\n",
+        "print(a)"
       ],
       "metadata": {
         "id": "cTlDMoeMx-sC",
-        "outputId": "cbc806c2-ce3a-4226-fb20-d3061bb96933",
+        "outputId": "07d62b37-05e8-47b7-cca7-04dd55b83454",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[[2 3 4 5]\n",
-            "  [6 7 8 9]]]\n"
+            "[[2 3 4 5]\n",
+            " [6 7 8 9]]\n",
+            "________\n",
+            "[[[2 4]]\n",
+            "\n",
+            " [[5 6]]]\n"
           ]
         }
       ]
@@ -2006,7 +2013,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2040,7 +2047,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2069,7 +2076,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2085,7 +2092,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a=np.ones([2,3])\n",
+        "a=np.ones([2,3]) #two rows and three coloumns that is why-2,3\n",
         "print(a)\n",
         "b=np.full([2,4],3)\n",
         "print(b)"
@@ -2097,7 +2104,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2114,21 +2121,23 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "a=np.array(2)\n",
         "b=np.array([3,5,6])\n",
         "c=np.array([2,1,6])\n",
         "print(a*b+c)\n",
         "print(np.median(a))\n",
-        "#mode=?\n"
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "60B9G0IB6lSv",
-        "outputId": "0b4b8de3-2a45-41b6-d117-ac30adade988",
+        "outputId": "637ab6d2-43a8-45e2-81d3-6e7af5ebeb16",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2136,6 +2145,86 @@
           "text": [
             "[ 8 11 18]\n",
             "2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mode=np.array([2,6,4,4,2,6,6])\n",
+        "um=[]\n",
+        "for i in mode:\n",
+        " if i not in um:\n",
+        "  um.append(i)\n",
+        "  print(um)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dyfq5sc5Bevv",
+        "outputId": "08adf939-4bda-4451-a4d9-0e9cee86411b"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[np.int64(2)]\n",
+            "[np.int64(2), np.int64(6)]\n",
+            "[np.int64(2), np.int64(6), np.int64(4)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mode=np.array([2,4,6,2,5,6,2])\n",
+        "unmode=set(mode)\n",
+        "print(unmode)"
+      ],
+      "metadata": {
+        "id": "qE6YZ0WsJ66u",
+        "outputId": "1bbbdf37-3e0a-4177-b092-07f81fb4570b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{np.int64(2), np.int64(4), np.int64(5), np.int64(6)}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mode=np.array([2,5,4,8,2,7,6])\n",
+        "uvalue=np.unique(mode)\n",
+        "print(uvalue)"
+      ],
+      "metadata": {
+        "id": "CbX_kmM3JsEB",
+        "outputId": "57c2e699-e1da-4517-b4b2-04aa20913ca1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2 4 5 6 7 8]\n"
           ]
         }
       ]
