--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiUMLb/deyVPcO0tv42D7q",
+      "authorship_tag": "ABX9TyMHFPJ/BaJw1YrVwY1n28ty",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1978,7 +1978,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2137,7 +2137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2166,7 +2166,7 @@
         "id": "Dyfq5sc5Bevv",
         "outputId": "08adf939-4bda-4451-a4d9-0e9cee86411b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2193,7 +2193,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2218,13 +2218,352 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[2 4 5 6 7 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "a=np.linspace(0,1,5) # for the values of 0-1 (linspace)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "gVb2EqTd4c6-",
+        "outputId": "31b726f6-98d4-4a6b-f19c-bacaaf4c8266",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.   0.25 0.5  0.75 1.  ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#random generator for numbers\n",
+        "a=np.random.randint(10,500,100)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "fwp_G5V25LvR",
+        "outputId": "f2e2089e-d798-480b-a8ac-c8ddaf37dfee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[403 192 385 313 240  44 331 487 430 362  47 449 107 238 199 134 377 411\n",
+            " 186 143  40 215 297 209 170 245 416 261 347 401 459 430 179 188 336 329\n",
+            " 473 165 118  83 242 105  91 160 107  14 373 377 343 195 465  36  98  74\n",
+            " 201  93  71 169  68 267 225 126 294 380 185  38 441 335 432  17 382  42\n",
+            " 218 414 326 413  61 488 205 343 147 413  59 222 490 105 269 410 383 355\n",
+            " 331 153 463 440 446  82 137 473 368 319]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# arranging numbers without using loop\n",
+        "a=np.arange(1,100,2)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "iK6s3YBP5oBp",
+        "outputId": "0ef277b2-0b68-4492-b1e6-a21e9bc31ae0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 1  3  5  7  9 11 13 15 17 19 21 23 25 27 29 31 33 35 37 39 41 43 45 47\n",
+            " 49 51 53 55 57 59 61 63 65 67 69 71 73 75 77 79 81 83 85 87 89 91 93 95\n",
+            " 97 99]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.arange(1,100,6)\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "Ah4oHPUc5_h6",
+        "outputId": "074de1de-f076-4cd4-d659-81d293b3b34f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 1  7 13 19 25 31 37 43 49 55 61 67 73 79 85 91 97]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([1,2,3,4])\n",
+        "t=a[:2] #slicing in one dimensional\n",
+        "print(a)\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "1ZwO21D49ZMy",
+        "outputId": "c84877ce-cf4c-4d4a-c9a8-e42b9851840a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4]\n",
+            "[1 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([[5,6],[7,8]])\n",
+        "t=a[0][0:] #slicing in two dimensional  (0 is the name of array)\n",
+        "s=a[1,1:] #another method for slicing (1 is the name of array)\n",
+        "print(a)\n",
+        "print(t)\n",
+        "print(s)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tOaXnBR86hpJ",
+        "outputId": "91c31be8-1ca2-4545-f3b3-dfe1d394dea0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5 6]\n",
+            " [7 8]]\n",
+            "[5 6]\n",
+            "[8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([[[5,8,3]],[[4,6,7]]])\n",
+        "t=a[0,0,0:3]\n",
+        "s=a[1,0,1:]\n",
+        "print(a)\n",
+        "print(t)\n",
+        "print(s)"
+      ],
+      "metadata": {
+        "id": "FD50ZBlc7aUa",
+        "outputId": "df841128-65eb-4365-dba1-3a9841a05366",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[5 8 3]]\n",
+            "\n",
+            " [[4 6 7]]]\n",
+            "[5 8 3]\n",
+            "[6 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([[[5,6,3],[2,3,4]],[[5,2,3],[2,3,1]]]) # three dimesional with different arrays\n",
+        "print(a)\n",
+        "t=a[0][1][0:2]\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "IADcVb1ACFm_",
+        "outputId": "e6343f83-7464-481a-80f2-472154cccc0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[5 6 3]\n",
+            "  [2 3 4]]\n",
+            "\n",
+            " [[5 2 3]\n",
+            "  [2 3 1]]]\n",
+            "[2 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([50,20,30,50])\n",
+        "b=np.array([30,50,60,40])\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a*b)\n",
+        "print(a/b)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "o4L3wvDpDrWB",
+        "outputId": "d79c9ab5-48cb-46a5-946f-69c091671eaf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[80 70 90 90]\n",
+            "[ 20 -30 -30  10]\n",
+            "[1500 1000 1800 2000]\n",
+            "[1.66666667 0.4        0.5        1.25      ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([[5,2],[2,3]])\n",
+        "t=a**2\n",
+        "print(t)\n"
+      ],
+      "metadata": {
+        "id": "mRz_FtM1GegX",
+        "outputId": "74e11ad1-e741-42dd-9d23-8d72be53cbf9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[25  4]\n",
+            " [ 4  9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([[[[[[5,3,4],[3,4,2]]]]]])\n",
+        "\n",
+        "t=a[0][0][0][0][0][0:2]\n",
+        "print(t)"
+      ],
+      "metadata": {
+        "id": "eWavC4xLFqIf",
+        "outputId": "e05904c6-9251-4ef6-eb16-51d228ef08f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([[[[5,6]]],[[[9,2]]]]) # four dimensional\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "Y1Zsg2Kp9no_",
+        "outputId": "decc64cd-4f39-4530-aae1-69707bab5a74",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[[5 6]]]\n",
+            "\n",
+            "\n",
+            " [[[9 2]]]]\n"
           ]
         }
       ]
