--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMT6WyadAMJlgb26CB/O02y",
+      "authorship_tag": "ABX9TyMiY0Hz6XH5/pHWOGkJFYU+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2322,11 +2322,11 @@
         "print(np.vstack((a,b)))\n"
       ],
       "metadata": {
-        "id": "zhkZpDZDDC0J",
-        "outputId": "5cc694b8-3091-4018-9b3c-09d60c63b4b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zhkZpDZDDC0J",
+        "outputId": "5cc694b8-3091-4018-9b3c-09d60c63b4b9"
       },
       "execution_count": 14,
       "outputs": [
@@ -2352,8 +2352,8 @@
         "gender=[]\n",
         "with open(\"sales_data.csv\",\"r\") as file:\n",
         "  reader=csv.reader(file)\n",
-        "\n",
-        "\n",
+        "  #x=list(reader)\n",
+        "  #print(x)\n",
         "  header=next(reader)\n",
         "  for row in reader:\n",
         "   customer_name.append(row[1])\n",
@@ -2367,11 +2367,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "yHj2aEs3Ld5d",
-        "outputId": "87e4e1b8-d0b1-47de-c7f2-434ab36e6a00",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yHj2aEs3Ld5d",
+        "outputId": "87e4e1b8-d0b1-47de-c7f2-434ab36e6a00"
       },
       "execution_count": 35,
       "outputs": [
@@ -2397,11 +2397,11 @@
         "print(ax1)"
       ],
       "metadata": {
-        "id": "kbFJZnxgG0B5",
-        "outputId": "27bc3921-587c-4693-bda5-87f8bbb864fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kbFJZnxgG0B5",
+        "outputId": "27bc3921-587c-4693-bda5-87f8bbb864fa"
       },
       "execution_count": 19,
       "outputs": [
@@ -2684,11 +2684,11 @@
         "print(primeno)"
       ],
       "metadata": {
-        "id": "T_Beo4L4BktB",
-        "outputId": "584e4788-fe7e-4ba2-f765-5d5b0e99bf25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T_Beo4L4BktB",
+        "outputId": "584e4788-fe7e-4ba2-f765-5d5b0e99bf25"
       },
       "execution_count": 6,
       "outputs": [
