--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiY0Hz6XH5/pHWOGkJFYU+",
+      "authorship_tag": "ABX9TyNtd4F0mGE09V787Jzt4HFq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2328,7 +2328,7 @@
         "id": "zhkZpDZDDC0J",
         "outputId": "5cc694b8-3091-4018-9b3c-09d60c63b4b9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2373,7 +2373,7 @@
         "id": "yHj2aEs3Ld5d",
         "outputId": "87e4e1b8-d0b1-47de-c7f2-434ab36e6a00"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2390,6 +2390,29 @@
     {
       "cell_type": "code",
       "source": [
+        "#health data project\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "patient_id=[1,2,3,4,5,6,7,8,9,10]\n",
+        "patient_name=[\"rupa\",\"aman\",\"rekha\",\"meera\",\"sachin\",\"sohan\",\"swati\",\"priyanka\",\"anshika\",\"mohit\"]\n",
+        "age=[35,30,32,30,29,31,62,60,45,42]\n",
+        "gender=[\"female\",\"male\",\"female\",\"female\",\"male\",\"male\",\"male\",\"female\",\"female\",\"female\",\"male\"]\n",
+        "address=[\"chandigarh\",\"mohali\",\"panipat\",\"mohali\",\"chandigarh\",\"panipat\",\"chandigarh\",\"mohali\",\"panipat\",\"chandigarh\"]\n",
+        "medical_problem=[\"asthma\",\"blood pressure\",\"heart disease\",\"cold\",\"lung disease\",\"asthma\",\"lung disease\",\"blood pressure\",\"cold\",\"asthma\"]\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Qn0PnUszh0m-"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
         "a=np.array([[5,6],[2,3]])\n",
         "ax=np.sum(a,axis=0)\n",
         "ax1=np.sum(a,axis=1)\n",
@@ -2401,9 +2424,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kbFJZnxgG0B5",
-        "outputId": "27bc3921-587c-4693-bda5-87f8bbb864fa"
+        "outputId": "fcf3e2ac-77f1-47e1-d263-0fa4d3b24f76"
       },
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -2690,7 +2713,7 @@
         "id": "T_Beo4L4BktB",
         "outputId": "584e4788-fe7e-4ba2-f765-5d5b0e99bf25"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
