--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtd4F0mGE09V787Jzt4HFq",
+      "authorship_tag": "ABX9TyPBLBTYjNx7H28dNgu9wQil",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2399,6 +2399,7 @@
         "gender=[\"female\",\"male\",\"female\",\"female\",\"male\",\"male\",\"male\",\"female\",\"female\",\"female\",\"male\"]\n",
         "address=[\"chandigarh\",\"mohali\",\"panipat\",\"mohali\",\"chandigarh\",\"panipat\",\"chandigarh\",\"mohali\",\"panipat\",\"chandigarh\"]\n",
         "medical_problem=[\"asthma\",\"blood pressure\",\"heart disease\",\"cold\",\"lung disease\",\"asthma\",\"lung disease\",\"blood pressure\",\"cold\",\"asthma\"]\n",
+        "patient_fee=[1000,1500,1200,500,2000,1000,2000,1500,500,1000]\n",
         "\n",
         "\n",
         "\n"
