--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1LOiGVSkm/dYWYCbflZXg",
+      "authorship_tag": "ABX9TyNOS1Z7e29D0zkeuew+vbLk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2391,24 +2391,50 @@
       "cell_type": "code",
       "source": [
         "#health data project\n",
+        "import csv\n",
+        "health_data=[[\"patient id\",\"patient name\",\"patient age\",\"gender\",\"address\",\"medical problem\",\"fee\"],\n",
+        "[1,2,3,4,5,6,7,8,9,10],\n",
+        "[\"rupa\",\"aman\",\"rekha\",\"meera\",\"sachin\",\"sohan\",\"swati\",\"priyanka\",\"anshika\",\"mohit\"],\n",
+        "[35,30,32,30,29,31,62,60,45,42],\n",
+        "\n",
+        "[\"female\",\"male\",\"female\",\"female\",\"male\",\"male\",\"male\",\"female\",\"female\",\"female\",\"male\"],\n",
+        "[\"chandigarh\",\"mohali\",\"panipat\",\"mohali\",\"chandigarh\",\"panipat\",\"chandigarh\",\"mohali\",\"panipat\",\"chandigarh\"],\n",
+        "[\"asthma\",\"blood pressure\",\"heart disease\",\"cold\",\"lung disease\",\"asthma\",\"lung disease\",\"blood pressure\",\"cold\",\"asthma\"],\n",
+        "[1000,1500,1200,500,2000,1000,2000,1500,500,1000]]\n",
+        "with open (\"health data.csv\",\"w\") as file:\n",
+        "  write=csv.write()\n",
         "\n",
         "\n",
-        "patient_id=[1,2,3,4,5,6,7,8,9,10]\n",
-        "patient_name=[\"rupa\",\"aman\",\"rekha\",\"meera\",\"sachin\",\"sohan\",\"swati\",\"priyanka\",\"anshika\",\"mohit\"]\n",
-        "age=[35,30,32,30,29,31,62,60,45,42]\n",
-        "gender=[\"female\",\"male\",\"female\",\"female\",\"male\",\"male\",\"male\",\"female\",\"female\",\"female\",\"male\"]\n",
-        "address=[\"chandigarh\",\"mohali\",\"panipat\",\"mohali\",\"chandigarh\",\"panipat\",\"chandigarh\",\"mohali\",\"panipat\",\"chandigarh\"]\n",
-        "medical_problem=[\"asthma\",\"blood pressure\",\"heart disease\",\"cold\",\"lung disease\",\"asthma\",\"lung disease\",\"blood pressure\",\"cold\",\"asthma\"]\n",
-        "patient_fee=[1000,1500,1200,500,2000,1000,2000,1500,500,1000]\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "Qn0PnUszh0m-"
+        "id": "Qn0PnUszh0m-",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "5a40ef64-926a-4428-ae49-8212d3d33eaa"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "module 'csv' has no attribute 'write'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2118957371.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m [1000,1500,1200,500,2000,1000,2000,1500,500,1000]]\n\u001b[1;32m     12\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"health data.csv\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m   \u001b[0mwrite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'csv' has no attribute 'write'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2427,7 +2453,7 @@
         "id": "kbFJZnxgG0B5",
         "outputId": "fcf3e2ac-77f1-47e1-d263-0fa4d3b24f76"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
