--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSXtsTYphEZ/1LmXbsjMBg",
+      "authorship_tag": "ABX9TyOIEQhch9oPEoCdUb+nJvl1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2675,12 +2675,12 @@
         "#df[\"Amount\"].sum()"
       ],
       "metadata": {
-        "id": "ZLXOZd0bfrB3",
-        "outputId": "bffb085a-1084-4e60-d3d5-5754099d1548",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
-        }
+        },
+        "id": "ZLXOZd0bfrB3",
+        "outputId": "bffb085a-1084-4e60-d3d5-5754099d1548"
       },
       "execution_count": 24,
       "outputs": [
@@ -3004,13 +3004,38 @@
       "source": [
         "df=pd.read_csv(\"sales_data 23.csv\")\n",
         "x=df.groupby([\"State\",\"Product\"])[\"Amount\"].sum()\n",
-        "x.to_csv(\"s.csv\")"
+        "x.to_csv(\"s.csv\")\n",
+        "print(x)"
       ],
       "metadata": {
-        "id": "Owcg5fZ6gZ8P"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Owcg5fZ6gZ8P",
+        "outputId": "2966a02c-ed9d-4735-ed58-af8321fc4e6a"
       },
-      "execution_count": 33,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "State  Product  \n",
+            "Delhi  Camera       241802\n",
+            "       Headphone    285101\n",
+            "       Laptop       203040\n",
+            "       Phone        361825\n",
+            "       Purse        239637\n",
+            "                     ...  \n",
+            "UP     Rings        425470\n",
+            "       Shirt        213141\n",
+            "       Shoes        241797\n",
+            "       Tablet       339045\n",
+            "       Watch        268519\n",
+            "Name: Amount, Length: 80, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3024,11 +3049,11 @@
         ""
       ],
       "metadata": {
-        "id": "VlHLFtZKg8Tc",
-        "outputId": "3e2992ec-d531-4e49-e4e5-c1c9b47e9dde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VlHLFtZKg8Tc",
+        "outputId": "3e2992ec-d531-4e49-e4e5-c1c9b47e9dde"
       },
       "execution_count": 31,
       "outputs": [
