--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIEQhch9oPEoCdUb+nJvl1",
+      "authorship_tag": "ABX9TyP6H84IcJSszpWUQQAl1Ye9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -448,7 +448,7 @@
         "id": "hbuAV_nNZFtT",
         "outputId": "10eb4571-dfba-46ae-ca2a-d6a80600ec5f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2640,7 +2640,7 @@
           "height": 492
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2682,7 +2682,7 @@
         "id": "ZLXOZd0bfrB3",
         "outputId": "bffb085a-1084-4e60-d3d5-5754099d1548"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3014,7 +3014,7 @@
         "id": "Owcg5fZ6gZ8P",
         "outputId": "2966a02c-ed9d-4735-ed58-af8321fc4e6a"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3040,13 +3040,48 @@
     {
       "cell_type": "code",
       "source": [
+        "#calculator by using function\n",
+        "def num(a,b):\n",
+        " return a-b\n",
+        "print(num(45,40))\n",
+        "\n",
+        "def num(a,b):\n",
+        " return a+b\n",
+        "print(num(40,50))\n",
+        "\n",
+        "def num(a,b):\n",
+        " return a*b\n",
+        "print(num(5,4))\n"
+      ],
+      "metadata": {
+        "id": "yuDMcN4vn27v",
+        "outputId": "6f88fbc4-2dc4-4ffe-9151-764dfeb70a0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "90\n",
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#data of dictionary in tabular form in pandas\n",
         "employee={\"name\":[\"ajay\",\"ram\",\"shyam\"],\n",
         "          \"age\":[20,40,30],\n",
         "          \"salaray\":[20000,40000,50000]}\n",
         "df=pd.DataFrame(employee)\n",
-        "print(df)\n",
-        ""
+        "print(df)\n"
       ],
       "metadata": {
         "colab": {
@@ -3055,7 +3090,7 @@
         "id": "VlHLFtZKg8Tc",
         "outputId": "3e2992ec-d531-4e49-e4e5-c1c9b47e9dde"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
